# nomnom

./: .env.example  .gitignore  CLAUDE.md  README.md  TESTING.md  docker-compose.yml  plan.md  pyproject.toml
.claude/artifacts/2025-12-28/openfoodfacts/: OPENFOODFACTS_INTEGRATION.md  QUICK_REFERENCE.md  README.md  database_schema.sql  example_implementation.py
scripts/: README.md  download_openfoodfacts.sh  setup_mongodb.sh
tests/: CHROME_WORKFLOWS.md  README.md  setup_test_environment.py
tests/e2e/: test_barcode_scanning.py
tests/fixtures/: helpers.py  test_data.py
tests/templates/: playwright_test_template.py
